# agents_playground

./: .env.example  .gitignore  .pre-commit-config.yaml  ALL_DOCS.md  Dockerfile  Makefile  QUICKSTART.md  README.md  consolidated_tests_agents.txt  debug_mock.py  docker-compose.yml  extract_documentation.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  test_fda_analysis.py  test_results.xml  test_search.py  test_tool.py  tests_consolidated.txt  u00261
.github/workflows/: quality.yml
Backlog/: DYNAMIC_TOOL_BACKLOG.md  IMPROVED_TESTING_BACKLOG.md  STATE_MACHINE_REFACTOR.md  WORKER_HELPERS_TEST_REFACTOR.md
Backlog/API_TOOL/: FDA_API_GUIDELINES.md  FDA_API_REVIEW.md  FDA_GAP_ANALYSIS.md  fda_checker.py  fda_ruleset_v1.json  fda_validators.py  sample_spec_compliant.json  sample_spec_violations.json
app/: .ruff_worker_state.py  api_client.py  audit.py  config.py  database.py  db_sync.py  db_utils.py  governance_metrics.py  instance.py  logging_config.py  main.py  metrics.py  models.py  prompts.yaml  schemas.py  task_state.py  tasks.py  text_utils.py  trace_utils.py  tracing.py  websocket.py  worker.py  worker_backup.py  worker_helpers.py  worker_lease.py  worker_state.py  workflow_definition.py  workflow_init.py  workflow_registry.py
app/agents/: __init__.py  assessment_agent.py  base.py  guideline_checker_agent.py  registry.py  registry_init.py  report_generator_agent.py  research_agent.py  severity_assessor_agent.py  spec_parser_agent.py
app/governance/: __init__.py
app/governance/validators/: __init__.py  fda_validators.py
app/middleware/: mtls.py
app/orchestrator/: __init__.py  base.py  coordination_strategies.py  declarative_orchestrator.py  fda_analysis_orchestrator.py  research_assessment.py
app/routers/: admin.py  governance.py  tasks.py
app/tools/: __init__.py  base.py  calculator.py  registry.py  registry_init.py  web_search.py
app/workflows/: research_assessment.yaml  simple_sequential.yaml
config/: agents.yaml  tools.yaml
docs/: AGENT_REGISTRY.md  API_REFERENCE.md  ARCHITECTURE.md  CODE_QUALITY.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_QUALITY_REPORT.md  CODE_REVIEW_CHECKLIST.md  DEVELOPMENT.md  FILES_INDEX.md  MONITORING.md  OPENWEBUI.md  OPENWEBUI_TOOLS.md  QUICKSTART.md  QUICK_REFERENCE.md  REGISTRY_API.md  TOOL_REGISTRY.md  TROUBLESHOOTING.md  WORKER_SCALING.md  WORKFLOWS.md
docs/statemachines/: WORKER_STATEMACHINE.md
guidelines/: GENERIC_STATEMACHINE_DOCUMENTATION.md  GENERIC_TEST_IMPROVEMENTS.md  refactor_to_state_machine.md
integrations/openwebui/: discover.py  openwebui_agent.py  openwebui_agent_tool.py  openwebui_discover.py  openwebui_discover_tool.py  openwebui_flow.py  openwebui_task_tool.py  openwebui_tool.py  openwebui_workflow_tool.py
monitoring/: tempo.yaml
monitoring/grafana/: datasources.yaml
monitoring/ui/: Dockerfile  README.md  app.py  config.py  requirements.txt  test_connection.py
monitoring/ui/data/: database.py
monitoring/ui/pages/: 1_📊_Dashboard.py  2_💰_Costs.py  3_🔍_Task_Search.py  4_👤_User_Search.py
postgres-init/: 001-init-pgvector.sql  002-init-tasks.sql  002b-init-audit-logs.sql  003_add_cost_tracking.sql  004_add_multi_agent_support.sql  005_add_tenant_tracking.sql  006_add_worker_leases.sql  007_add_governance_analysis_tables.sql  008_seed_governance_rulesets.sql
scripts/: assess_quality.py  cleanup_mutants.sh  mutmut.py
tests/: README.md  conftest.py  test_admin_registry_endpoints.py  test_agent_registry.py  test_agent_task_endpoint.py  test_agent_tool.py  test_agent_tool_integration.py  test_agents.py  test_api.py  test_audit.py  test_auto_discovery.py  test_calculator.py  test_coordination_strategies.py  test_cost_tracking.py  test_discover_tool.py  test_discover_tool_integration.py  test_e2e_workflow.py  test_fda_governance.py  test_fda_governance_extended.py  test_flow_tool_dynamic.py  test_flow_tool_integration.py  test_json_parsing.py  test_models.py  test_orchestrator.py  test_registry_api_integration.py  test_registry_enhancements.py  test_registry_integration.py  test_schemas.py  test_task_state.py  test_tasks.py  test_tool_base.py  test_tool_integration.py  test_tool_registry.py  test_web_search.py  test_websocket.py  test_worker.py  test_worker_entrypoint.py  test_worker_helpers.py  test_worker_lease.py  test_worker_state.py  (+7 more)
utils/: generate_certs.sh  test_api.py  test_tools.py  test_websocket.py  test_workflow.py
